Grid and styling of Contact us and My list

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,4 @@
 @import 'variables', 'mixins', 'functions',
-        'grid', 'base', 'filter', 'results', 'show', 'aside', 'compare',
+        'grid', 'base', 'filter', 'results', 'show', 'compare_box', 'compare',
         'edit',
         'media_queries', 'media_queries_print'
