--- a/app/views/nursing_homes/index.html.haml
+++ b/app/views/nursing_homes/index.html.haml
@@ -3,7 +3,7 @@
     .actions.top
       = link_to add_icon_text, new_nursing_home_path, class: "btn btn-small btn-primary"
   - cache do
-    %h1.title= "Hitta & jämför äldreboenden"
+    %h1.body-copy= "Hitta & jämför äldreboenden"
     = render 'filter'
 
     %menu.switch-view
