--- a/app/views/nursing_homes/index.html.haml
+++ b/app/views/nursing_homes/index.html.haml
@@ -9,11 +9,11 @@
     %menu.switch-view
       %li#as-list.active
         %a{ href: nursing_homes_path }
-          %span.icon-list.icon-large
+          %span.fa.fa-list.fa-large
           Visa som lista
       %li#as-map
         %a{ href: nursing_homes_path }
-          %span.icon-map-marker.icon-large
+          %span.fa.fa-map-marker.fa-large
           Visa på karta
 
     %ul.results
