Styling of show page

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -36,8 +36,8 @@ ul, ol, li {
 .actions {
   float: right;
   font-size: emize(14);
+  margin-top: .15em;
   li {
-    float: right;
     margin-left: .4em;
   }
 }
