--- a/app/assets/stylesheets/show.css.scss
+++ b/app/assets/stylesheets/show.css.scss
@@ -11,6 +11,8 @@
         display: none;
         width: 100%;
         height: auto;
+        border: $border;
+        border-top: 0;
       }
     }
     menu {
