Styling of edit view

--- a/app/assets/stylesheets/edit.css.scss
+++ b/app/assets/stylesheets/edit.css.scss
@@ -12,7 +12,7 @@
   .thumbs, .uploads, {
     margin-left: 0;
     input.file {
-      margin-bottom: 1.5em;
+      margin: .4em 0 1.5em;
     }
     .thumb, .placeholder {
       margin: 0 1em 1em 0;
