--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -10,16 +10,16 @@
         - @user.errors.full_messages.each do |msg|
           %li= msg
 
-  .control-group
+  .form-group
     .control-label= f.label :username, 'Användarnamn:'
     .controls= f.text_field :username, class: "medium"
-  .control-group
+  .form-group
     .control-label= f.label :displayname, "Namn:"
     .controls= f.text_field :displayname, readonly: true, tabindex: -1
-  .control-group
+  .form-group
     .control-label= f.label :email, "E-postadress:"
     .controls= f.text_field :email, readonly: true, tabindex: -1
-  .control-group
+  .form-group
     .controls
       = f.submit "Lägg till", class: "btn btn-primary"
       = link_to 'Avbryt', users_path, class: 'btn'
