--- a/app/assets/stylesheets/edit.css.scss
+++ b/app/assets/stylesheets/edit.css.scss
@@ -6,6 +6,10 @@
     margin-bottom: 2em;
   }
 
+  .attachments .checkbox {
+    padding-top: .2em !important;
+  }
+
   .thumbs, .uploads, {
     margin-left: 0;
     input.file {
@@ -14,8 +18,8 @@
     .thumb, .placeholder {
       margin: 0 1em 1em 0;
       float: left;
-      width: 133px;
-      height: 120px;
+      width: 150px;
+      height: 150px;
       overflow: hidden;
       padding: .5em;
       background: #F5F5EE;
