--- a/app/views/nursing_homes/_attachment_uploads.html.haml
+++ b/app/views/nursing_homes/_attachment_uploads.html.haml
@@ -4,14 +4,14 @@
 .help-block Här kan du ladda upp PDF- och Excel-filer för kvalitetsuppföljning av verksamheten. Filerna får inte vara större än 1MB.
 
 - if new_attachments.include?(false)
-  .control.group
+  .attachments
     = f.fields_for :attachments do |asset_fields|
       - unless asset_fields.object.new_record?
         .form-group
           .control-label= asset_fields.label :attachment_link_text, "Länktext:*"
-          .controls= asset_fields.text_field :attachment_link_text, class: "form-control"
-          .controls= asset_fields.object.attachment_file_name
           .controls
+            = asset_fields.text_field :attachment_link_text, class: "form-control"
+            = "Filnamn: #{asset_fields.object.attachment_file_name}"
             .checkbox
               %label.checkbox
                 = asset_fields.check_box :_destroy
