--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,5 @@
-.body-copy
-  %h1= "Användare"
+%main{ role: :main }
+  %h1.body-copy= "Användare"
 
   %table.wrap.full.user
     %thead
@@ -18,6 +18,6 @@
           %td= user.email
           %td= user.is_admin ? "Administratör" : "Informatör"
           %td= link_to 'Växla roll', toggle_admin_user_path(user), :method => :put
-          %td= link_to delete_icon_text, user, confirm: 'Vill du ta bort användaren?', :method => :delete, class: "btn btn-danger btn-mini"
+          %td= link_to delete_icon_text, user, confirm: 'Vill du ta bort användaren?', :method => :delete, class: "btn btn-danger btn-sm"
   %menu
     %li= link_to add_icon_text, new_user_path, class: "btn btn-primary"
