--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,25 +1,27 @@
-.body-copy
-  %h1= "Ny användare"
-  %p.help Sök på personens användarnamn i personalkatalogen, t.ex. "cectro"
+%main{ role: :main }
+  .body-copy
+    %h1= "Ny användare"
+    %p.help Sök på personens användarnamn i personalkatalogen, t.ex. "cectro"
 
-= form_for(@user, html: { multipart: true, class: 'form-horizontal', id: 'edit-form' }) do |f|
-  - if @user.errors.any?
-    #error_explanation.warning
-      #h2 Vänligen korrigera följande uppgifter:
-      %ul
-        - @user.errors.full_messages.each do |msg|
-          %li= msg
+  = form_for(@user, html: { multipart: true, class: 'basic', id: 'edit-form' }) do |f|
+    - if @user.errors.any?
+      #error_explanation.warning
+        #h2 Vänligen korrigera följande uppgifter:
+        %ul
+          - @user.errors.full_messages.each do |msg|
+            %li= msg
 
-  .form-group
-    .control-label= f.label :username, 'Användarnamn:'
-    .controls= f.text_field :username, class: "medium"
-  .form-group
-    .control-label= f.label :displayname, "Namn:"
-    .controls= f.text_field :displayname, readonly: true, tabindex: -1
-  .form-group
-    .control-label= f.label :email, "E-postadress:"
-    .controls= f.text_field :email, readonly: true, tabindex: -1
-  .form-group
-    .controls
-      = f.submit "Lägg till", class: "btn btn-primary"
-      = link_to 'Avbryt', users_path, class: 'btn'
+    .form-group
+      .control-label= f.label :username, 'Användarnamn:'
+      .controls= f.text_field :username, class: "form-control"
+    .form-group
+      .control-label= f.label :displayname, "Namn:"
+      .controls= f.text_field :displayname, readonly: true, tabindex: -1, class: "form-control"
+    .form-group
+      .control-label= f.label :email, "E-postadress:"
+      .controls= f.text_field :email, readonly: true, tabindex: -1, class: "form-control"
+    .form-group
+      %span.control-label
+      .controls
+        = f.submit "Lägg till", class: "btn btn-primary"
+        = link_to 'Avbryt', users_path, class: 'btn btn-default'
