--- a/app/assets/stylesheets/media_queries.css.scss
+++ b/app/assets/stylesheets/media_queries.css.scss
@@ -1,119 +1,88 @@
-// @media (min-width: 68em) {
-//   #filter select {
-//     width: emize(180);
-//   }
-// }
+@media (min-width: 68em) {
+  #filter select {
+    width: emize(180);
+  }
+}
 
-// @media (max-width: 68em) {
-//   body {
-//     min-width: 0;
-//   }
-// }
+@media (max-width: 48em) {
+  ul.results {
+    .summary {
+      h2 {
+        float: none;
+      }
+      .compare-check {
+        float: none;
+        margin: .5em 0;
+      }
+    }
+  }
+}
 
-// @media (max-width: 48em) {
-//   ul.results {
-//     .summary {
-//       h2 {
-//         float: none;
-//       }
-//       .compare-check {
-//         float: none;
-//         margin: .5em 0;
-//       }
-//     }
-//   }
-// }
+@media (max-width: 40em) {
+  #filter {
+    .form-row {
+      float: none;
+      label {
+        width: emize(160);
+        display: inline-block;
+      }
+      select {
+        width: emize(260);
+      }
+    }
+    .form-row.reset {
+      margin: .5em 0 1em;
+      label {
+        display: none;
+      }
+    }
+  }
+  .breadcrumbs, ul#user-menu {
+    float: none;
+    clear: both;
+  }
+  ul#user-menu li {
+    margin-left: 0;
+  }
+  .show {
+    .quality {
+      border-top: none;
+      .indicator {
+        border-bottom: none;
+        .label {
+          float: none;
+          width: auto;
+        }
+        .value {
+          float: none;
+          margin: .4em 0 1em;
+          .graph {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+  .actions.top {
+    display: none;
+  }
+}
 
-// @media (max-width: 40em) {
-//   #filter {
-//     .form-row {
-//       float: none;
-//       label {
-//         width: emize(160);
-//         display: inline-block;
-//       }
-//       select {
-//         width: emize(260);
-//       }
-//     }
-//     .form-row.reset {
-//       margin: .5em 0 1em;
-//       label {
-//         display: none;
-//       }
-//     }
-//   }
-//   .breadcrumbs, ul#user-menu {
-//     float: none;
-//     clear: both;
-//   }
-//   ul#user-menu li {
-//     margin-left: 0;
-//   }
-//   .show {
-//     .quality {
-//       border-top: none;
-//       .indicator {
-//         border-bottom: none;
-//         .label {
-//           float: none;
-//           width: auto;
-//         }
-//         .value {
-//           float: none;
-//           margin: .4em 0 1em;
-//           .graph {
-//             width: 100%;
-//           }
-//         }
-//       }
-//     }
-//   }
-//   .actions.top {
-//     display: none;
-//   }
-// }
+@media (max-width: 28em) {
+  ul.results {
+    .summary {
+      @include columns(12);
+    }
+    .image {
+      display: none;
+    }
+  }
+}
 
-// @media (max-width: 32em) {
-//   .show {
-//     .description {
-//       @include columns(12);
-//     }
-//     #slideshow {
-//       @include columns(12);
-//     }
-//   }
-
-//   .show {
-//     dl.details {
-//       border: none;
-//       dt, dd {
-//         float: none;
-//         display: block;
-//         border: none;
-//         margin: 0;
-//       }
-//       dd {
-//         margin-bottom: .5em;
-//       }
-//     }
-//   }
-// }
-// @media (max-width: 28em) {
-//   ul.results {
-//     .summary {
-//       @include columns(12);
-//     }
-//     .image {
-//       display: none;
-//     }
-//   }
-// }
-
-// @media (max-width: 22em) {
-//   // Hack to mask SBK:s label
-//   a.close-map {
-//     padding-right: 2em;
-//     background: #dedede; // SBKs color
-//   }
-// }
+@media (max-width: 22em) {
+  // Hack to mask SBK:s label
+  a.close-map {
+    padding-right: 2em;
+    background: #dedede; // SBKs color
+  }
+}
