--- a/app/views/nursing_homes/index.html.haml
+++ b/app/views/nursing_homes/index.html.haml
@@ -1,7 +1,7 @@
 %main{ role: :main }
   - if current_user
     .actions.top
-      = link_to add_icon_text, new_nursing_home_path, class: "btn btn-small btn-primary"
+      = link_to add_icon_text, new_nursing_home_path, class: "btn btn-sm btn-default"
   - cache do
     %h1.body-copy= "Hitta & jämför äldreboenden"
     = render 'filter'
@@ -35,4 +35,4 @@
 
   - if current_user
     .actions
-      = link_to add_icon_text, new_nursing_home_path, class: "btn btn-small btn-primary"
+      = link_to add_icon_text, new_nursing_home_path, class: "btn btn-sm btn-default"
