--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -38,6 +38,15 @@ ul, ol, li, menu {
   }
 }
 
+@media (max-width: 38em) {
+  .actions {
+    float: none;
+  }
+  .actions.top {
+    margin-bottom: 1.5em;
+  }
+}
+
 .actions.bottom {
   clear: both;
 }
@@ -57,6 +66,15 @@ ul#user-menu {
     text-align: right;
     display: inline-block;
     margin-left: 1em;
+  }
+}
+@media (max-width: 40em) {
+  .breadcrumbs, ul#user-menu {
+    float: none;
+    clear: both;
+  }
+  ul#user-menu li {
+    margin-left: 0;
   }
 }
 
