--- a/app/views/nursing_homes/_attachment_uploads.html.haml
+++ b/app/views/nursing_homes/_attachment_uploads.html.haml
@@ -26,7 +26,7 @@
           = asset_fields.text_field :attachment_link_text, class: "form-control"
         %span.control-label
         .controls.uploads
-          = asset_fields.file_field :attachment, class: "form-control file"
+          = asset_fields.file_field :attachment, class: "file"
 - else
   .help-block
     = "Du kan maximalt använda #{APP_CONFIG["max_number_of_attachments"]} bilagor."
