--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -61,7 +61,7 @@ ul#user-menu {
   margin: .3em 0 1em;
   li {
     font-size: emize(14);
-    font-family: $sansSerif;
+    font-family: $sans-serif;
     line-height: 1.3;
     text-align: right;
     display: inline-block;
