--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,4 @@
-@import 'variables', 'mixins', 'functions',
+@import 'malmo_external',
         'grid', 'base', 'filter', 'results', 'show', 'my_list', 'compare',
         'edit',
         'media_queries_print'
